--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
     "start": "node app.coffee"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "body-parser": "~1.12.0",
     "chalk": "^1.0.0",
     "compression": "~1.4.1",
     "cookie-parser": "~1.3.3",
     "express": "~4.12.0",
+    "express-paginate": "0.0.8",
+    "express-validator": "^2.9.0",
     "glob": "~4.4.1",
+    "lodash": "^3.6.0",
     "method-override": "~2.3.0",
     "mongoose": "~3.8.20",
-    "morgan": "~1.5.0"
+    "morgan": "~1.5.0",
+    "pluralize": "^1.1.2"
   },
   "devDependencies": {
     "coffee-script": "~1.9.1",
