--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "async": "^0.9.0",
+    "aws-sdk": "^2.1.24",
     "body-parser": "~1.12.0",
     "chalk": "^1.0.0",
     "compression": "~1.4.1",
@@ -19,7 +20,8 @@
     "method-override": "~2.3.0",
     "mongoose": "~3.8.20",
     "morgan": "~1.5.0",
-    "pluralize": "^1.1.2"
+    "pluralize": "^1.1.2",
+    "q": "^1.2.0"
   },
   "devDependencies": {
     "coffee-script": "~1.9.1",
