--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "aws-sdk": "^2.1.24",
     "body-parser": "~1.12.0",
     "chalk": "^1.0.0",
+    "cli-table": "^0.3.1",
     "compression": "~1.4.1",
     "cookie-parser": "~1.3.3",
     "express": "~4.12.0",
     "express-paginate": "0.0.8",
     "express-validator": "^2.9.0",
     "glob": "~4.4.1",
+    "joi": "^6.2.0",
     "lodash": "^3.6.0",
     "method-override": "~2.3.0",
     "mongoose": "~3.8.20",
